Refactor run_spark.ps1